<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xavier.homework_week02_app_material_design.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:nextFocusForward="@+id/datePicker"
                android:layout_height="wrap_content"
                android:hint="@string/full_name" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/description_date"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/input_full_name"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:text="@string/fecha_de_nacimineto"
            android:layout_height="wrap_content" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_date"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_phone"
            android:nextFocusForward="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/datePicker">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:hint="@string/tel_fono" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_phone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:nextFocusForward="@+id/description"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description"
                android:maxLines="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripci_n_de_contacto" />

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:theme="@style/ButtonStyle"
        android:onClick="second_activity"
        android:text="@string/next" />

</RelativeLayout>
